--- a/hlogster.cabal
+++ b/hlogster.cabal
@@ -51,7 +51,7 @@ Executable hlogster
      Main-is: Logster.hs
   
   -- Packages needed in order to build this package.
-     Build-depends: base, network-fancy, split, time, json, parsec, bytestring
+     Build-depends: base, network-fancy, split, time, json, attoparsec, bytestring
   
   -- Modules not exported by this package.
   -- Other-modules:       
