initial ring buffer approach. very slow

--- a/hlogster.cabal
+++ b/hlogster.cabal
@@ -57,7 +57,7 @@ Executable hlogster
     Main-is: Logster.hs
   
   -- Packages needed in order to build this package.
-    Build-depends: base, network-fancy, split, time, json, attoparsec, bytestring, parallel, old-locale
+    Build-depends: base, network-fancy, split, time, json, attoparsec, bytestring, parallel, old-locale, data-clist, mtl
     GHC-Options: -O2 -threaded -feager-blackholing -with-rtsopts=-N
   -- Modules not exported by this package.
     Other-modules: Metric, Parsers, Carbon
