add counter for input rate

--- a/hlogster.cabal
+++ b/hlogster.cabal
@@ -61,11 +61,15 @@ Executable hlogster
   -- Packages needed in order to build this package.
     Build-depends: base, network, split, time, attoparsec, bytestring, parallel, old-locale, data-clist, mtl, template-haskell, regex-pcre, regex-base, array, containers, deepseq, aeson, unordered-containers, text
 
-    GHC-Options: -O2 -threaded -feager-blackholing -with-rtsopts=-N -rtsopts
+    GHC-Options: -O2 -threaded -feager-blackholing -rtsopts
 
     if flag(monitoring)
        Build-depends: ekg
        CPP-Options: -DUSE_EKG
+       GHC-Options: "-with-rtsopts=-T -N"
+    else
+       GHC-Options: -with-rtsopts=-N
+
   -- Modules not exported by this package.
     Other-modules: Metrics, Parsers, Carbon
 
