--- a/hlogster.cabal
+++ b/hlogster.cabal
@@ -59,7 +59,7 @@ Executable hlogster
     Main-is: Logster.hs
   
   -- Packages needed in order to build this package.
-    Build-depends: base, network, split, time, attoparsec, bytestring, parallel, old-locale, data-clist, mtl, template-haskell, regex-pcre, regex-base, array, containers, deepseq, aeson, unordered-containers, text
+    Build-depends: base, network, split, time, attoparsec, bytestring, parallel, old-locale, data-clist, mtl, template-haskell, regex-pcre, regex-base, array, containers>=0.5.2.1, deepseq, aeson, unordered-containers, text
 
     GHC-Options: -O2 -threaded -feager-blackholing -rtsopts
 
